--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,16 @@
             ul.nav_bar_right{
                 float:right;
             }
-            
+
+            body {
+                margin-left:150px;
+                margin-right:150px;
+                background-image: url('http://www.zingerbug.com/Backgrounds/background_images/tileable_red_brick_wall_seamless_pattern.jpg');
+                background-color: grey;
+                /* background-size:     cover;*/ 
+                background-repeat:   repeat;
+                background-position: center center; 
+            }
         </style>
         <div class="nav_bar">
             <ul>
