--- a/templates/post_listing.html
+++ b/templates/post_listing.html
@@ -6,6 +6,7 @@
     table.post_list {
         border-collapse: collapse;
         width: 100%;
+        background-color: white;
     }
     th, td {
     padding: 8px;
@@ -14,6 +15,10 @@
     }
     td.head{
         font-size: 150%;
+    }
+
+    tr:hover {
+        background-color: #f5f5f5;
     }
 </style>
 <table class="post_list">
